# freewvs

./: .gitignore  .travis.yml  CONTRIBUTIONS.md  COPYING  ISSUES  Makefile  README.md  SECURITY.md  freewvs  pyproject.toml  runpyci.sh  setup.py  update-freewvsdb
.github/workflows/: runpyci.yml  runtests.yml
freewvsdb/: bb.freewvs  bb.json  blog.freewvs  blog.json  cms.freewvs  cms.json  crm.freewvs  crm.json  gallery.freewvs  gallery.json  games.freewvs  games.json  gb1.freewvs  groupware.freewvs  groupware.json  guestbook.json  jscss.freewvs  jscss.json  link.freewvs  link.json  misc.freewvs  misc.json  phpcomponents.freewvs  phpcomponents.json  plugins.freewvs  plugins.json  themes.freewvs  themes.json  webshop.freewvs  webshop.json  wiki.freewvs  wiki.json
i18n/: de.mo  de.po  freewvs.pot
misc/: create-freewvsdb  wpver
tests/: test_codingstyle.py  test_codingstype.py  test_freewvs_testdata.py  test_jsonlint.py  test_pycodestyle.py
